<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宝贝成长记</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="birthtime">出生时辰</string>
    <string name="birthWeight">出生重量</string>
    <string name="note">备注</string>
    <string name="notHint">TA很懒，什么也没留下</string>
    <string name="all_record">所有记录</string>
    <string name="record">记录</string>
    <string name="category">分类</string>
    <string name="config">设置</string>
    <string name="label">标签</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="click_title">点击输入标题</string>
    <string name="baby_profile">宝贝档案</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="remind_write_name">请填写宝贝姓名</string>
    <string name="remind_write_sex">请选择宝贝性别</string>
    <string name="remind_write_birthday">请填写宝贝出生年月</string>
    <string name="remind_write_birthTime">请填写宝贝出生时辰</string>
    <string name="remind_write_birthweight">请填写宝贝出生重量</string>
    <string name="remind_correct_weight">请填写正确的重量</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="take_photo">拍照</string>
    <string name="tag">标签</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>

</resources>
