<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_common"
    android:orientation="vertical">

    <include layout="@layout/actionbar_profile_edit" />

    <include layout="@layout/common_divide_whole" />

    <RelativeLayout
        style="@style/profile_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height">

        <TextView
            android:id="@+id/tvName"
            style="@style/list_label_common"
            android:layout_centerVertical="true"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            style="@style/profile_right_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tvName"

            />

    </RelativeLayout>

    <include layout="@layout/common_divide" />

    <RelativeLayout
        style="@style/profile_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSex"
            style="@style/list_label_common"
            android:layout_centerVertical="true"
            android:text="@string/sex" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tvSex"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="男" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="女" />
        </RadioGroup>

    </RelativeLayout>

    <include layout="@layout/common_divide_whole" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_group_divide_height" />


    <include layout="@layout/common_divide_whole" />

    <RelativeLayout
        style="@style/profile_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBirthday"
            style="@style/list_label_common"
            android:layout_centerVertical="true"
            android:text="@string/birthday" />

        <TextView
            style="@style/profile_right_text"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <include layout="@layout/common_divide" />

    <RelativeLayout
        android:id="@+id/layoutBirthTime"
        style="@style/profile_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            style="@style/list_label_common"
            android:layout_centerVertical="true"
            android:text="@string/birthtime" />

        <TextView
            style="@style/profile_right_text"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <include layout="@layout/common_divide" />

    <RelativeLayout
        android:id="@+id/layoutBirthWeight"
        style="@style/profile_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvWeight"
            style="@style/list_label_common"
            android:layout_centerVertical="true"
            android:text="@string/birthWeight" />

        <EditText
            android:id="@+id/weight"
            style="@style/profile_right_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tvWeight"
            android:inputType="numberDecimal" />


    </RelativeLayout>

    <include layout="@layout/common_divide_whole" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_group_divide_height" />

    <TextView
        style="@style/list_label_common"
        android:text="@string/note" />

    <include layout="@layout/common_divide_whole" />

    <LinearLayout
        style="@style/profile_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/no_border"
            android:gravity="top"
            android:hint="@string/notHint"
            android:lines="5"
            android:paddingLeft="3dp" />
    </LinearLayout>

    <include layout="@layout/common_divide_whole" />


</LinearLayout>