<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/indicators"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_nav"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layoutRecords"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:tag="navImg"
            android:layout_width="@dimen/nav_item_width"
            android:layout_height="@dimen/nav_item_height"
            android:src="@drawable/record_focus"
            />
        <TextView
            android:tag="navLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:textColor="@color/green"
            />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutCategory"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:tag="navImg"
            android:layout_width="@dimen/nav_item_width"
            android:layout_height="@dimen/nav_item_height"
            android:src="@drawable/time_line_unfocus"
            />
        <TextView
            android:tag="navLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/grey"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutAddNote"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="@dimen/nav_add_note_width"
            android:layout_height="@dimen/nav_add_note_height"
            android:src="@drawable/add_note"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutTags"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:tag="navImg"
            android:layout_width="@dimen/nav_item_width"
            android:layout_height="@dimen/nav_item_height"
            android:src="@drawable/profile_unfocus"
            />
        <TextView
            android:tag="navLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:textColor="@color/grey"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutConfig"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:tag="navImg"
            android:layout_width="@dimen/nav_item_width"
            android:layout_height="@dimen/nav_item_height"
            android:src="@drawable/config_unfocus"
            />
        <TextView
            android:tag="navLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/config"
            />
    </LinearLayout>
</LinearLayout>